# own-blockchain-rust

./: README.md
blockchain/: Cargo.toml
blockchain/src/: block.rs  main.rs  proof_of_work.rs  transaction.rs
